--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,24 @@
 
     <build>
         <finalName>${project.artifactId}</finalName>
-
+        <!--<plugins>-->
+        <!--<plugin>-->
+        <!--<groupId>org.codehaus.mojo</groupId>-->
+        <!--<artifactId>jslint-maven-plugin</artifactId>-->
+        <!--<version>1.0.1</version>-->
+        <!--<executions>-->
+        <!--<execution>-->
+        <!--<goals>-->
+        <!--<goal>jslint</goal>-->
+        <!--</goals>-->
+        <!--<configuration>-->
+        <!--<sourceJsFolder>${basedir}/src/main/webapp/js</sourceJsFolder>-->
+        <!--<failOnIssues>false</failOnIssues>-->
+        <!--</configuration>-->
+        <!--</execution>-->
+        <!--</executions>-->
+        <!--</plugin>-->
+        <!--</plugins>-->
         <plugins>
             <plugin>
                 <groupId>com.github.eirslett</groupId>
@@ -120,7 +137,6 @@
 
                     <execution>
                         <id>install node and npm</id>
-                        <phase>generate-resources</phase>
                         <goals>
                             <goal>install-node-and-npm</goal>
                         </goals>
@@ -132,7 +148,6 @@
 
                     <execution>
                         <id>npm install</id>
-                        <phase>generate-resources</phase>
                         <goals>
                             <goal>npm</goal>
                         </goals>
@@ -141,20 +156,13 @@
                         </configuration>
                     </execution>
 
+
                     <execution>
-                        <id>javascript tests</id>
-                        <goals>
-                            <goal>karma</goal>
-                        </goals>
-
-                        <!-- optional: the default plase is "test". Some developers
-                        choose to run karma in the "integration-test" phase. -->
+                        <id>Gulp build</id>
                         <phase>test</phase>
-
-                        <configuration>
-                            <!-- optional: the default is "karma.conf.js" in your working directory -->
-                            <karmaConfPath>src/test/ui/valintaperusteet-test.conf.js</karmaConfPath>
-                        </configuration>
+                        <goals>
+                            <goal>gulp</goal>
+                        </goals>
                     </execution>
 
                 </executions>
@@ -162,5 +170,7 @@
 
         </plugins>
     </build>
+
+
 
 </project>
