--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-bootstrap": "0.11.0",
     "jquery": "2.1.0",
     "jquery-ui": "latest",
-    "lodash": "2.4.1"
+    "lodash": "2.4.1",
+    "angular-promise-cache": "~0.0.10"
   },
   "devDependencies": {
     "angular-mocks": "1.2.18",
