--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,18 @@
 {
   "name": "valintaperusteet",
   "dependencies": {
-    "angular": "1.2.18",
-    "angular-animate": "1.2.18",
-    "angular-route": "1.2.18",
-    "angular-resource": "1.2.18",
+    "angular": "1.2.22",
+    "angular-animate": "1.2.22",
+    "angular-route": "1.2.22",
+    "angular-resource": "1.2.22",
+      "angular-cookies": "1.2.22",
     "angular-bootstrap": "0.11.0",
     "jquery": "2.1.0",
     "jquery-ui": "latest",
-    "lodash": "2.4.1",
-    "angular-promise-cache": "~0.0.10"
+    "lodash": "2.4.1"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.18",
-    "angular-scenario": "1.2.18"
+    "angular-mocks": "1.2.22",
+    "angular-scenario": "1.2.22"
   }
 }
