--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "angular-animate": "1.2.22",
     "angular-route": "1.2.22",
     "angular-resource": "1.2.22",
+    "angular-cookies": "1.2.22",
     "angular-bootstrap": "0.11.0",
     "jquery": "2.1.0",
     "jquery-ui": "latest",
