--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "devDependencies": {
     "gulp": "3.8.5",
-    "gulp-util": "2.2.19",
-    "gulp-concat": "2.2.0",
-    "gulp-uglify": "0.2.1",
-    "run-sequence": "0.3.6",
     "gulp-clean": "0.3.1",
-    "gulp-livereload": "2.1.0",
-    "gulp-watch": "0.6.8",
+    "gulp-concat": "2.2.0",
     "gulp-karma": "0.0.4",
-      "karma": "0.12.16",
-    "karma-jasmine": "0.2.2",
+    "gulp-livereload": "2.1.0",
+    "gulp-uglify": "0.2.1",
+    "gulp-util": "2.2.19",
+    "gulp-watch": "0.6.8",
+    "karma": "^0.12.24",
     "karma-chrome-launcher": "~0.1.2",
     "karma-firefox-launcher": "~0.1.3",
-    "karma-phantomjs-launcher": "0.1.4"
+    "karma-jasmine": "0.2.2",
+    "karma-phantomjs-launcher": "0.1.4",
+    "run-sequence": "0.3.6"
   }
 }
