--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,19 @@
 {
   "name": "valintaperusteet",
   "dependencies": {
-    "angular": "1.3.0",
-    "angular-animate": "1.3.0",
-    "angular-route": "1.3.0",
-    "angular-resource": "1.3.0",
-    "angular-cookies": "1.3.0",
+    "angular": "1.3.2",
+    "angular-animate": "1.3.2",
+    "angular-route": "1.3.2",
+    "angular-resource": "1.3.2",
+    "angular-cookies": "1.3.2",
     "angular-bootstrap": "0.11.0",
     "jquery": "2.1.0",
-    "jquery-ui": "latest",
+    "jquery-ui": "1.11.2",
     "lodash": "2.4.1"
   },
   "devDependencies": {
-    "angular-mocks": "1.3.0",
-    "angular-scenario": "1.3.0"
+    "angular-mocks": "1.3.2",
+    "angular-scenario": "1.3.2",
+    "bootstrap-sass-official": "3.3.1"
   }
 }
