--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "angular-mocks": "1.3.2",
     "angular-scenario": "1.3.2",
-    "bootstrap-sass-official": "3.3.1"
+    "bootstrap-sass-official": "3.3.1",
+    "fontawesome": "4.2.0"
   }
 }
