--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "gulp": "3.8.5",
+    "gulp-autoprefixer": "1.0.1",
     "gulp-clean": "0.3.1",
     "gulp-concat": "2.2.0",
     "gulp-karma": "0.0.4",
