--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "gulp-uglify": "0.2.1",
     "gulp-util": "2.2.19",
     "gulp-watch": "0.6.8",
-    "karma": "^0.12.24",
-    "karma-chrome-launcher": "~0.1.2",
-    "karma-firefox-launcher": "~0.1.3",
+    "karma": "0.12.24",
+    "karma-chrome-launcher": "0.1.2",
+    "karma-firefox-launcher": "0.1.3",
     "karma-jasmine": "0.2.2",
     "karma-phantomjs-launcher": "0.1.4",
     "run-sequence": "0.3.6"
