--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "karma-firefox-launcher": "0.1.3",
     "karma-jasmine": "0.2.2",
     "karma-phantomjs-launcher": "0.1.4",
-    "run-sequence": "0.3.6",
-    "gulp-sass": "1.2.4"
+    "run-sequence": "0.3.6"
   }
 }
