--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,14 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+
+        <!-- it-test -->
+        <dependency>
+            <groupId>fi.vm.sade</groupId>
+            <artifactId>embedded-tomcat</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
