--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "karma-firefox-launcher": "0.1.3",
     "karma-jasmine": "0.2.2",
     "karma-phantomjs-launcher": "0.1.4",
+    "karma-junit-reporter": "*",
+    "karma-coverage": "~0.1",
     "run-sequence": "0.3.6"
   }
 }
