--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-bootstrap": "0.12.0",
     "jquery": "2.1.0",
     "jquery-ui": "1.11.2",
-    "lodash": "3.0.0"
+    "lodash": "3.0.0",
+    "angular-cache": "4.0.2"
   },
   "devDependencies": {
     "angular-mocks": "1.3.8",
