--- a/pom.xml
+++ b/pom.xml
@@ -165,7 +165,92 @@
 
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.2.10.v20150310</version>
 
+                <configuration>
+                    <systemProperties>
+                        <systemProperty>
+                            <name>log4j.configuration</name>
+                            <value>file:///${basedir}/src/test/resources/log4j.properties</value>
+                        </systemProperty>
+                    </systemProperties>
+                    <webAppConfig>
+                        <contextPath>/${project.artifactId}</contextPath>
+                    </webAppConfig>
+                    <httpConnector>
+                        <port>8180</port>
+                        <idleTimeout>30000000</idleTimeout>
+                    </httpConnector>
+                    <contextHandlers>
+                        <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
+                            <contextPath>/valintaperusteet-ui</contextPath>
+                            <resourceBase>${basedir}/target/valintaperusteet-ui</resourceBase>
+                            <configurationClasses>
+                                <configurationClass>org.eclipse.jetty.webapp.WebInfConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.webapp.WebXmlConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.webapp.MetaInfConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.webapp.FragmentConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.plus.webapp.EnvConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.plus.webapp.PlusConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.webapp.JettyWebXmlConfiguration</configurationClass>
+                            </configurationClasses>
+                        </contextHandler>
+                        <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
+                            <contextPath>/valintaperusteet-ui/app</contextPath>
+                            <resourceBase>${basedir}/src/main/webapp/app</resourceBase>
+                            <configurationClasses>
+                                <configurationClass>org.eclipse.jetty.webapp.WebInfConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.webapp.WebXmlConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.webapp.MetaInfConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.webapp.FragmentConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.plus.webapp.EnvConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.plus.webapp.PlusConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.webapp.JettyWebXmlConfiguration</configurationClass>
+                            </configurationClasses>
+                        </contextHandler>
+                        <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
+                            <contextPath>/valintaperusteet-ui/common</contextPath>
+                            <resourceBase>${basedir}/src/main/webapp/common</resourceBase>
+                            <configurationClasses>
+                                <configurationClass>org.eclipse.jetty.webapp.WebInfConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.webapp.WebXmlConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.webapp.MetaInfConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.webapp.FragmentConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.plus.webapp.EnvConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.plus.webapp.PlusConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.webapp.JettyWebXmlConfiguration</configurationClass>
+                            </configurationClasses>
+                        </contextHandler>
+
+                    </contextHandlers>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.eclipse.jetty</groupId>
+                        <artifactId>jetty-servlets</artifactId>
+                        <version>9.2.10.v20150310</version>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>org.javassist</groupId>
+                                <artifactId>javassist</artifactId>
+                            </exclusion>
+                        </exclusions>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm</artifactId>
+                        <version>5.0.2</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm-commons</artifactId>
+                        <version>5.0.2</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
 
