--- a/pom.xml
+++ b/pom.xml
@@ -224,7 +224,19 @@
                                 <configurationClass>org.eclipse.jetty.webapp.JettyWebXmlConfiguration</configurationClass>
                             </configurationClasses>
                         </contextHandler>
-
+                        <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
+                            <contextPath>/valintaperusteet-ui/test</contextPath>
+                            <resourceBase>${basedir}/src/test/webapp/test</resourceBase>
+                            <configurationClasses>
+                                <configurationClass>org.eclipse.jetty.webapp.WebInfConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.webapp.WebXmlConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.webapp.MetaInfConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.webapp.FragmentConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.plus.webapp.EnvConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.plus.webapp.PlusConfiguration</configurationClass>
+                                <configurationClass>org.eclipse.jetty.webapp.JettyWebXmlConfiguration</configurationClass>
+                            </configurationClasses>
+                        </contextHandler>
                     </contextHandlers>
                 </configuration>
                 <dependencies>
