--- a/package.json
+++ b/package.json
@@ -1,21 +1,9 @@
 {
   "devDependencies": {
-    "gulp": "3.8.11",
-    "gulp-clean": "0.3.1",
-    "gulp-concat": "2.5.2",
-    "gulp-karma": "0.0.4",
-    "gulp-livereload": "3.8.0",
-    "gulp-uglify": "1.2.0",
-    "gulp-util": "3.0.4",
-    "gulp-watch": "4.2.4",
-    "gulp-sass": "1.3.3",
-    "karma": "0.12.31",
-    "karma-chrome-launcher": "0.1.7",
-    "karma-firefox-launcher": "0.1.4",
-    "karma-jasmine": "0.3.5",
-    "karma-phantomjs-launcher": "0.1.4",
-    "karma-junit-reporter": "*",
-    "karma-coverage": "0.2.7",
-    "run-sequence": "1.0.2"
+    "test":  "*",
+    "mocha-phantomjs": "*"
+  },
+  "scripts": {
+    "test": "mocha-phantomjs -R dot http://localhost:8180/valintaperusteet-ui/test/runner.html"
   }
 }
