--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,9 @@
                             <value>file:///${basedir}/src/test/resources/log4j.properties</value>
                         </systemProperty>
                     </systemProperties>
+                    <webApp>
+                        <descriptor>src/test/webapp/WEB-INF/web.xml</descriptor>
+                    </webApp>
                     <webAppConfig>
                         <contextPath>/${project.artifactId}</contextPath>
                     </webAppConfig>
