--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,18 @@
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-webapp</artifactId>
+            <version>9.2.11.v20150529</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -157,225 +169,6 @@
                     </execution>
                 </executions>
                 -->
-            </plugin>
-            <plugin>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.2.10.v20150310</version>
-                <executions>
-                    <execution>
-                        <id>start-jetty</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>start</goal>
-                        </goals>
-                        <configuration>
-                            <scanIntervalSeconds>0</scanIntervalSeconds>
-                            <daemon>true</daemon>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>stop-jetty</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>stop</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <systemProperties>
-                        <systemProperty>
-                            <name>log4j.configuration</name>
-                            <value>file:///${basedir}/src/test/resources/log4j.properties</value>
-                        </systemProperty>
-                    </systemProperties>
-                    <webAppConfig>
-                        <contextPath>/${project.artifactId}</contextPath>
-                        <descriptor>${basedir}/src/test/webapp/WEB-INF/web.xml</descriptor>
-                    </webAppConfig>
-                    <stopPort>21079</stopPort>
-                    <stopKey>STOP</stopKey>
-                    <httpConnector>
-                        <port>18180</port>
-                        <idleTimeout>30000000</idleTimeout>
-                    </httpConnector>
-                    <contextHandlers>
-                        <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
-                            <contextPath>/valintaperusteet-ui</contextPath>
-                            <resourceBase>${basedir}/target/valintaperusteet-ui</resourceBase>
-                            <configurationClasses>
-                                <configurationClass>org.eclipse.jetty.webapp.WebInfConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.WebXmlConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.MetaInfConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.FragmentConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.plus.webapp.EnvConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.plus.webapp.PlusConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.JettyWebXmlConfiguration</configurationClass>
-                            </configurationClasses>
-                        </contextHandler>
-                        <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
-                            <contextPath>/valintaperusteet-ui/app</contextPath>
-                            <resourceBase>${basedir}/src/main/webapp/app</resourceBase>
-                            <configurationClasses>
-                                <configurationClass>org.eclipse.jetty.webapp.WebInfConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.WebXmlConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.MetaInfConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.FragmentConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.plus.webapp.EnvConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.plus.webapp.PlusConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.JettyWebXmlConfiguration</configurationClass>
-                            </configurationClasses>
-                        </contextHandler>
-                        <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
-                            <contextPath>/valintaperusteet-ui/common</contextPath>
-                            <resourceBase>${basedir}/src/main/webapp/common</resourceBase>
-                            <configurationClasses>
-                                <configurationClass>org.eclipse.jetty.webapp.WebInfConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.WebXmlConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.MetaInfConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.FragmentConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.plus.webapp.EnvConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.plus.webapp.PlusConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.JettyWebXmlConfiguration</configurationClass>
-                            </configurationClasses>
-                        </contextHandler>
-                        <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
-                            <contextPath>/valintaperusteet-ui/test</contextPath>
-                            <resourceBase>${basedir}/src/test/webapp/test</resourceBase>
-                            <configurationClasses>
-                                <configurationClass>org.eclipse.jetty.webapp.WebInfConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.WebXmlConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.MetaInfConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.FragmentConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.plus.webapp.EnvConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.plus.webapp.PlusConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.JettyWebXmlConfiguration</configurationClass>
-                            </configurationClasses>
-                        </contextHandler>
-                        <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
-                            <contextPath>/valintaperusteet-ui/configuration</contextPath>
-                            <resourceBase>${basedir}/src/test/webapp/configuration</resourceBase>
-                            <configurationClasses>
-                                <configurationClass>org.eclipse.jetty.webapp.WebInfConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.WebXmlConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.MetaInfConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.FragmentConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.plus.webapp.EnvConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.plus.webapp.PlusConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.JettyWebXmlConfiguration</configurationClass>
-                            </configurationClasses>
-                        </contextHandler>
-                    </contextHandlers>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.eclipse.jetty</groupId>
-                        <artifactId>jetty-servlets</artifactId>
-                        <version>9.2.10.v20150310</version>
-                        <exclusions>
-                            <exclusion>
-                                <groupId>org.javassist</groupId>
-                                <artifactId>javassist</artifactId>
-                            </exclusion>
-                        </exclusions>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.ow2.asm</groupId>
-                        <artifactId>asm</artifactId>
-                        <version>5.0.2</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.ow2.asm</groupId>
-                        <artifactId>asm-commons</artifactId>
-                        <version>5.0.2</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <plugin>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.2.10.v20150310</version>
-
-                <configuration>
-                    <systemProperties>
-                        <systemProperty>
-                            <name>log4j.configuration</name>
-                            <value>file:///${basedir}/src/test/resources/log4j.properties</value>
-                        </systemProperty>
-                    </systemProperties>
-                    <webAppConfig>
-                        <contextPath>/${project.artifactId}</contextPath>
-                    </webAppConfig>
-                    <httpConnector>
-                        <port>8180</port>
-                        <idleTimeout>30000000</idleTimeout>
-                    </httpConnector>
-                    <contextHandlers>
-                        <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
-                            <contextPath>/valintaperusteet-ui</contextPath>
-                            <resourceBase>${basedir}/target/valintaperusteet-ui</resourceBase>
-                            <configurationClasses>
-                                <configurationClass>org.eclipse.jetty.webapp.WebInfConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.WebXmlConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.MetaInfConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.FragmentConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.plus.webapp.EnvConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.plus.webapp.PlusConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.JettyWebXmlConfiguration</configurationClass>
-                            </configurationClasses>
-                        </contextHandler>
-                        <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
-                            <contextPath>/valintaperusteet-ui/app</contextPath>
-                            <resourceBase>${basedir}/src/main/webapp/app</resourceBase>
-                            <configurationClasses>
-                                <configurationClass>org.eclipse.jetty.webapp.WebInfConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.WebXmlConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.MetaInfConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.FragmentConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.plus.webapp.EnvConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.plus.webapp.PlusConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.JettyWebXmlConfiguration</configurationClass>
-                            </configurationClasses>
-                        </contextHandler>
-                        <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
-                            <contextPath>/valintaperusteet-ui/common</contextPath>
-                            <resourceBase>${basedir}/src/main/webapp/common</resourceBase>
-                            <configurationClasses>
-                                <configurationClass>org.eclipse.jetty.webapp.WebInfConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.WebXmlConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.MetaInfConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.FragmentConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.plus.webapp.EnvConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.plus.webapp.PlusConfiguration</configurationClass>
-                                <configurationClass>org.eclipse.jetty.webapp.JettyWebXmlConfiguration</configurationClass>
-                            </configurationClasses>
-                        </contextHandler>
-
-                    </contextHandlers>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.eclipse.jetty</groupId>
-                        <artifactId>jetty-servlets</artifactId>
-                        <version>9.2.10.v20150310</version>
-                        <exclusions>
-                            <exclusion>
-                                <groupId>org.javassist</groupId>
-                                <artifactId>javassist</artifactId>
-                            </exclusion>
-                        </exclusions>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.ow2.asm</groupId>
-                        <artifactId>asm</artifactId>
-                        <version>5.0.2</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.ow2.asm</groupId>
-                        <artifactId>asm-commons</artifactId>
-                        <version>5.0.2</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
