--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>fi.vm.sade.valintaperusteet</groupId>
         <artifactId>ui</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>yhdenpaikansaanto-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
