--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,10 @@
             <artifactId>generic-common</artifactId>
         </dependency>
         <dependency>
+              <groupId>org.jasig.cas.client</groupId>
+              <artifactId>cas-client-support-distributed-ehcache</artifactId>
+      	</dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
         </dependency>
